Deprecation Fixes (#102)
* Fixes a bunch of deprecated methods, classes
Resolves a number of warnings
Adds vscode settings for fun :)

* Update vscode settings

* Update more deprecations.

* Remove some serialization fields that were added in a previous commit.